--- a/usuarios/templates/cadastro.html
+++ b/usuarios/templates/cadastro.html
@@ -14,7 +14,7 @@
     <div class="container">
         {% if messages %}
             {% for message in messages %}
-                {{message}} | {{message.tags}}
+                <div class="alert {{message.tags}}">{{message}}</div>
             {% endfor %}
         {% endif %}
         <h3 class="font-destaque">Cadastre-se</h3>
