--- a/exames/templates/gerenciar_exames.html
+++ b/exames/templates/gerenciar_exames.html
@@ -33,7 +33,7 @@
                             </div>
                             <div class="col-md">
                                 {% if exame.status == 'F' %}
-                                    <a href="{{exame.resultado.url}}" class="btn btn-light">Abrir</a>
+                                    <a href="{% url 'permitir_abrir_exame' exame.id %}" class="btn btn-light">Abrir</a>
                                 {% else %}
                                     <a href="#" class="btn btn-light disabled">Abrir</a>
                                 {% endif %}
@@ -58,7 +58,7 @@
                             </div>
                             <div class="col-md">
                                 {% if exame.status == 'F' %}
-                                    <a href="{{exame.resultado.url}}" class="btn btn-light">Abrir</a>
+                                    <a href="{% url 'permitir_abrir_exame' exame.id %}" class="btn btn-light">Abrir</a>
                                 {% else %}
                                     <a href="#" class="btn btn-light disabled">Abrir</a>
                                 {% endif %}
