--- a/empresarial/templates/exame_cliente.html
+++ b/empresarial/templates/exame_cliente.html
@@ -23,7 +23,7 @@
         <br>
         <div class="row">
             <div class="col-md-6">
-                <form action="" method="POST">
+                <form action="{% url 'alterar_dados_exame' exame.id %}" method="POST" enctype="multipart/form-data">{% csrf_token %}
                     <input type="FILE" value="Alterar PDF" class="btn-secundario" name="resultado">
                
                     <br>
@@ -36,17 +36,17 @@
                 <h3>Status</h3>
 
                 <select name="status" id="" class="form-select">
-                    <option style="color: black;" value="E">Em análise</option>
-                    <option style="color: black;" value="F">Finalizado</option>
+                    <option style="color: black;" {% if exame.status == 'E' %}selected{% endif %} value="E">Em análise</option>
+                    <option style="color: black;" {% if exame.status == 'F' %}selected{% endif %} value="F">Finalizado</option>
                 </select>
                 <br>
-                <input type="checkbox" name="requer_senha" id=""><label for="">Requer senha para acessar ?</label>
+                <input type="checkbox" name="requer_senha" {% if exame.requer_senha %}checked{% endif %} id=""><label for="">Requer senha para acessar ?</label>
                 <br>
                 <br>
 
                 <input type="submit" value="Salvar" class="btn-default">
                 </form>
-                <a style="text-decoration: none;" href="" class="btn-secundario">Gerar senha</a>
+                <a style="text-decoration: none;" href="{% url 'gerar_senha' exame.id %}" class="btn-secundario">Gerar senha</a>
             </div>
         </div>
         
